# stockstats-lecat

./: .gitignore  LICENSE  Makefile  README.md  lecat.db  lecat.spec  pyproject.toml  requirements.txt  run_desktop.py  seed_database.py
.github/workflows/: build_release.yml
docs/: 00_Overview.md  01_Grammar_Specification.md  02_System_Architecture.md  03_Function_Registry_API.md  04_Error_Handling.md  05_Integration_Strategy.md  06_Operations_Manual.md  07_Database_Schema.md  LECAT_Training_Guide.md
docs/pm_instructions/: 01_Project_Brief_and_Specs.md  02_CR001_Context_Shifting.md  03_Phase2_Sprint1_Compiler_Frontend.md  04_Phase2_Sprint2_Evaluator_Registry.md  08_Phase3_Sprint3_Performance_and_Indicators.md  09_Phase2_Sprint3_Backtester_and_Generator.md  09_Phase4_Sprint1_Web_Dashboard.md  10_Phase3_Sprint1_Evolutionary_Engine.md  10_Phase4_Sprint2_Persistence_and_Packaging.md  11_Phase3_Sprint2_RealData_and_Validation.md  11_Phase5_Release_Polish.md  12_Phase6_Sprint1_Database_Integration.md  13_Phase7_Sprint1_Desktop_Packaging.md
lecat/: __init__.py  ast_nodes.py  backtester.py  cache.py  config.yaml  context.py  data_loader.py  dynamic_registry.py  errors.py  evaluator.py  evolution.py  exporter.py  fitness.py  generator.py  indicators.py  lexer.py  logger.py  main.py  optimizer.py  parallel.py  parser.py  plugin_loader.py  registry.py  reporting.py  repository.py  stats.py  std_lib.py  tokens.py
lecat/dashboard/: app.py
lecat/data/: schema.sql
lecat_plugins/: math_utils.py
tests/: strategy_EMA(10)___EMA(50)_AN.json  test_backtester.py  test_data_loader.py  test_database.py  test_evaluator.py  test_evolution.py  test_fitness.py  test_generator.py  test_indicators.py  test_lexer.py  test_parallel.py  test_parser.py  test_persistence.py  test_plugin_loader.py  test_registry.py  test_reporting.py  test_results.txt
